test/libyul/yulSyntaxTests/invalid_type.yul
{
    let x: invalidType
}
// ====
// dialect: evmTyped
// ----
// TypeError: (10-24): "invalidType" is not a valid type (user defined types are not yet supported).
